--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link> rel="stylesheet" href="style.css" </link>
     <meta charset="UTF-8">
     <title>Доска объявлений</title>
 </head>
