--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link> rel="stylesheet" href="style.css" </link>
+    <link rel="stylesheet" href="style.css" >
     <meta charset="UTF-8">
     <title>Доска объявлений</title>
 </head>
 <body>
     <h1>Заголовок 1</h1>
-    <h2>Заголовок 2</h2>
+    <div class="par-1">
+    <h2 class="par-1">Заголовок 2</h2>
+        <p class="par-1">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis iste libero totam voluptatibus. Culpa libero nesciunt obcaecati quo quos, ut. Amet dolor dolore eum labore minima modi officiis veniam, voluptate?
+        </p>
+        </div>
     <h3>Заголовок 3</h3>
     <h4>Заголовок 4</h4>
     <h5>Заголовок 5</h5>
     <h6>Заголовок 6</h6>
     <div>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis iste libero totam voluptatibus. Culpa libero nesciunt obcaecati quo quos, ut. Amet dolor dolore eum labore minima modi officiis veniam, voluptate?
-    </p>
-    <p>
+
+    <p class="par-2">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi at blanditiis consectetur consequuntur doloribus et eum harum molestias nihil odit officia possimus quasi quis quo recusandae sed, similique temporibus veritatis.
     </p>
      </div>
