--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         <li>2 Элемент</li>
         <li>3 Элемент</li>
     </ol>
+    <img src="https://w.forfun.com/fetch/b5/b59cb84829d07b33035b671f69184a61.jpeg" width="1920" height="1200">
 </body>
 </html>
