Добавлена картинка, параграф с наклонным текстом по центру, к стилизованному тексту добавлена тень зеленого цвета(смотреть обязательно с файлом style.css)

--- a/lesson_2_and_homework.html
+++ b/lesson_2_and_homework.html
@@ -33,6 +33,9 @@
         <li>2 Элемент</li>
         <li>3 Элемент</li>
     </ol>
+    <p align="center" class="par-3">
+        To be, or not to be, that is the question
+    </p>
     <img src="https://w.forfun.com/fetch/b5/b59cb84829d07b33035b671f69184a61.jpeg" width="1920" height="1200">
 </body>
 </html>
