--- a/page2.html
+++ b/page2.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <title>Page2</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-    Вернуться на страницу page1
-    <a href="page1.html">клик</a>
+<nav class="navbar bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="page1.html">Вернуться на страницу page1</a>
+  </div>
+</nav>
+<!--    Вернуться на страницу page1-->
+<!--    <a href="page1.html">клик</a>-->
 </body>
 </html>
