Добавлена многострочная форма и панель навигации. Смотреть вместе с файлом page2.html

--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,7 @@
     <a class="navbar-brand" href="page2.html">Ссылка на страницу page2</a>
   </div>
 </nav>
-<!-- <a class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="page2.html" target="_blank">Ссылка на страницу page2</a>-->
+<!-- <a class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="page2(lesson_3_and_homework).html" target="_blank">Ссылка на страницу page2</a>-->
  <form action="">
      <div>
      <label for='field1'>Введите логин</label>
