Добавлена многострочная форма и панель навигации. Смотреть вместе с файлом page2.html

--- a/page1(lesson_3_and_homework).html
+++ b/page1(lesson_3_and_homework).html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="page2.html">Ссылка на страницу page2</a>
+    <a class="navbar-brand" href="page2(lesson_3_and_homework).html">Ссылка на страницу page2</a>
   </div>
 </nav>
 <!-- <a class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="page2(lesson_3_and_homework).html" target="_blank">Ссылка на страницу page2</a>-->
