--- a/page2(lesson_3_and_homework).html
+++ b/page2(lesson_3_and_homework).html
@@ -9,10 +9,10 @@
 <body>
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="page1.html">Вернуться на страницу page1</a>
+    <a class="navbar-brand" href="page1(lesson_3_and_homework).html">Вернуться на страницу page1</a>
   </div>
 </nav>
 <!--    Вернуться на страницу page1-->
-<!--    <a href="page1.html">клик</a>-->
+<!--    <a href="page1(lesson_3_and_homework).html">клик</a>-->
 </body>
 </html>
